--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -129,6 +129,7 @@
                 android:layout_height="10dp" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/login_btn"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:text="@string/login"
