--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    android:background="@drawable/img"
     tools:context=".Screen.LoginActivity">
 
     <RelativeLayout
@@ -45,7 +45,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="-20dp"
-        app:cardCornerRadius="28dp">
+        app:cardCornerRadius="28dp"
+        android:alpha="0.88">
 
         <LinearLayout
             android:layout_width="match_parent"
