--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="-30dp"
         android:alpha="0.2"
-        android:background="@color/DeepPink" />
+        android:background="@color/xam" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,10 +24,10 @@
         tools:ignore="UseCompoundDrawables">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="213dp"
+            android:layout_height="65dp"
             android:importantForAccessibility="no"
-            android:src="@drawable/car_rental" />
+            android:src="@drawable/tgkhu8e7" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -46,11 +46,11 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="-20dp"
         app:cardCornerRadius="28dp"
-        android:alpha="0.88">
+        android:alpha="0.85">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="28dp">
 
@@ -58,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/sign_up"
-                android:textColor="@color/Purple"
+                android:textColor="@color/xam"
                 android:textSize="32sp"
                 android:textStyle="bold" />
 
@@ -176,8 +176,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:alpha="0.7"
-                android:text="@string/already_s_have_an_account_login_now"
                 android:gravity="center"
+                android:text="@string/already_s_have_an_account_login_now"
                 android:textStyle="bold" />
 
             <View
