--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,13 @@
     </style>
 
     <style name="Theme.MyAndroidProject" parent="Base.Theme.MyAndroidProject" />
+
+    <style name="Theme.MyAndroidProject.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.MyAndroidProject.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.MyAndroidProject.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
