--- a/app/src/main/res/layout/activity_personal_information.xml
+++ b/app/src/main/res/layout/activity_personal_information.xml
@@ -21,10 +21,8 @@
             android:id="@+id/userProfileImageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_user_profile"
-            android:contentDescription="@string/user_profile_image"
+            android:src="@drawable/eye_showing"
             android:scaleType="centerCrop"
-            android:background="@drawable/profile_image_background"
             android:layout_marginBottom="8dp"/>
 
         <TextView
@@ -43,7 +41,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/headerLayout"
-        android:layout_above="@id/bottomNavigationView"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         app:cardCornerRadius="28dp"
@@ -117,17 +114,7 @@
         android:textColor="@color/xam"
         android:textSize="18sp"
         android:background="@android:color/transparent"
-        android:layout_above="@id/bottomNavigationView"
         android:layout_centerHorizontal="true"/>
 
-    <!-- Bottom Navigation View -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
