Progress on Showroom UI

--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -12,8 +12,7 @@
         android:layout_height="240dp"
         android:background="@color/CornflowerBlue"
 
-        android:clickable="false"
-        android:foreground="@mipmap/support_foreground" />
+        android:clickable="false" />
 
     <FrameLayout
         android:layout_width="match_parent"
