--- a/app/src/main/res/layout/activity_showroom.xml
+++ b/app/src/main/res/layout/activity_showroom.xml
@@ -5,15 +5,33 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShowroomActivity">
+    tools:context=".Customer.ShowroomActivity">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="39dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="172dp"
+        android:layout_marginTop="188dp"
+        android:text="LMAO"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/main2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_constraintRight_toLeftOf="20px"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="-16dp"
-        app:menu="@menu/menu_bottom"/>
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:menu="@menu/menu_bottom" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
