--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -10,7 +10,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="240dp"
-        android:background="@color/CornflowerBlue"
+        android:background="@color/notYellow"
 
         android:clickable="false" />
 
@@ -51,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
-                    android:background="@color/Coral"
+                    android:background="@color/Dark"
                     android:text="Call" />
 
                 <Space
@@ -65,7 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
-                    android:background="@color/BlueViolet"
+                    android:background="@color/xam"
                     android:text="Five Bro" />
             </LinearLayout>
         </LinearLayout>
