--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.myandroidproject.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:name="com.example.myandroidproject.Fragments.NavigatorFragment"
+        android:label="Home"
+        tools:layout="@layout/activity_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.myandroidproject.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:name="com.example.myandroidproject.Fragments.NavigatorFragment"
+        android:label="Gallery"
+        tools:layout="@layout/activity_login" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.myandroidproject.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:name="com.example.myandroidproject.Fragments.NavigatorFragment"
+        android:label="Slideshow"
+        tools:layout="@layout/activity_sign_up" />
 </navigation>
