--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,13 +8,6 @@
     android:background="@drawable/img"
     tools:context=".Screen.LoginActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="-30dp"
-        android:alpha="0.2"
-        android:background="@color/DeepPink" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,19 +17,10 @@
         tools:ignore="UseCompoundDrawables">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="328dp"
+            android:layout_height="104dp"
             android:importantForAccessibility="no"
-            android:src="@drawable/car_rental" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/rent_car"
-            android:textColor="@color/White"
-            android:textSize="32sp"
-            tools:ignore="MissingConstraints" />
+            android:src="@drawable/logo_rental" />
 
     </LinearLayout>
 
@@ -58,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/sign_up"
-                android:textColor="@color/Purple"
+                android:textColor="@color/xam"
                 android:textSize="32sp"
                 android:textStyle="bold" />
 
@@ -183,6 +167,13 @@
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="10dp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="-30dp"
+                android:alpha="0.2"
+                android:background="@color/notYellow" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
