--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -5,15 +5,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="0dp"
-    android:paddingRight="0dp">
+    android:paddingRight="0dp"
+    android:background="@color/xam">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="240dp"
-        android:background="@color/CornflowerBlue"
-
-        android:clickable="false"
-        android:foreground="@mipmap/support_foreground" />
+        android:background="@color/xam"
+        android:clickable="false" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -52,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
-                    android:background="@color/Coral"
+                    android:background="@color/notYellow"
                     android:text="Call" />
 
                 <Space
@@ -66,7 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
-                    android:background="@color/BlueViolet"
+                    android:background="@color/notYellow"
                     android:text="Five Bro" />
             </LinearLayout>
         </LinearLayout>
