--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="-30dp"
         android:alpha="0.2"
-        android:background="@color/DeepPink" />
+        android:background="@color/xam" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/wel_come"
-                android:textColor="@color/Purple"
+                android:textColor="@color/notYellow"
                 android:textSize="32sp"
                 android:textStyle="bold" />
 
