--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -9,10 +9,6 @@
         android:title="Trip"
         android:icon="@drawable/baseline_directions_car_24"/>
     <item
-        android:id="@+id/the"
-        android:title="User"
-        android:icon="@drawable/baseline_home_24"/>
-    <item
         android:id="@+id/notify"
         android:title="Notify"
         android:icon="@drawable/baseline_circle_notifications_24"/>
@@ -20,4 +16,8 @@
         android:id="@+id/user"
         android:title="User"
         android:icon="@drawable/baseline_account_circle_24"/>
+    <item
+        android:id="@+id/supportBtn"
+        android:title="Support"
+        android:icon="@drawable/baseline_home_24"/>
 </menu>
