--- a/app/src/main/res/layout/activity_showroom.xml
+++ b/app/src/main/res/layout/activity_showroom.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Customer.ShowroomActivity">
+    tools:context=".customer.ShowroomActivity">
 
     <TextView
         android:id="@+id/textView3"
