--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.myandroidproject.Fragments.NavigatorFragment"
+        android:name="com.example.myandroidproject.fragments.NavigatorFragment"
         android:label="Home"
         tools:layout="@layout/activity_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.myandroidproject.Fragments.NavigatorFragment"
+        android:name="com.example.myandroidproject.fragments.NavigatorFragment"
         android:label="Gallery"
         tools:layout="@layout/activity_login" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.myandroidproject.Fragments.NavigatorFragment"
+        android:name="com.example.myandroidproject.fragments.NavigatorFragment"
         android:label="Slideshow"
         tools:layout="@layout/activity_sign_up" />
 </navigation>
