update: navigation + chatbox

--- a/app/src/main/res/layout/activity_showroom.xml
+++ b/app/src/main/res/layout/activity_showroom.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".customer.ShowroomActivity">
+    tools:context=".customer.activities.ShowroomActivity">
 
     <TextView
         android:id="@+id/textView3"
@@ -13,25 +13,12 @@
         android:layout_height="19dp"
         android:layout_marginStart="172dp"
         android:layout_marginTop="188dp"
-        android:text="LMAO"
+        android:text="Showroom"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/main2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:menu="@menu/menu_bottom" />
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
