--- a/app/src/main/res/layout/activity_details_car.xml
+++ b/app/src/main/res/layout/activity_details_car.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".customer.DetailsCar"
+    tools:context=".customer.activities.DetailsCar"
     android:background="@color/xam">
 
     <LinearLayout
