--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/img"
-    tools:context=".customer.LoginActivity">
+    tools:context=".customer.activities.LoginActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
