--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment">
+    tools:context=".customer.fragments.HomeFragment">
 
 
     <LinearLayout
@@ -87,6 +87,7 @@
             android:layout_height="20dp"/>
 
         <androidx.cardview.widget.CardView
+            android:layout_marginBottom="50dp"
             android:layout_width="match_parent"
             android:layout_height="400dp"
             app:cardCornerRadius="20dp"
@@ -96,9 +97,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/searchView"/>
 
-
     </LinearLayout>
 
 
 
-</FrameLayout>
+</ScrollView>
