--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -6,47 +6,67 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
+    android:background="@android:color/white"
     tools:context=".customer.activities.MyAccount">
-
-    <EditText
-        android:id="@+id/etUsername"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Username" />
 
     <EditText
         android:id="@+id/etFirstname"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="First Name" />
+        android:layout_height="61dp"
+        android:layout_marginBottom="16dp"
+        android:hint="First Name"
+        android:padding="10dp"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/etLastname"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Last Name" />
+        android:layout_height="64dp"
+        android:layout_marginBottom="16dp"
+        android:hint="Last Name"
+        android:padding="10dp"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/etPhone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Phone" />
+        android:layout_height="61dp"
+        android:layout_marginBottom="16dp"
+        android:hint="Phone"
+        android:padding="10dp"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email" />
+        android:layout_height="62dp"
+        android:layout_marginBottom="16dp"
+        android:hint="Email"
+        android:padding="10dp"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/etBirthday"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Birth Day" />
+        android:layout_height="57dp"
+        android:layout_marginBottom="16dp"
+        android:hint="Birth Day"
+        android:padding="10dp"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/btnSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save" />
+        android:text="Save"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:padding="12dp"/>
+
 </LinearLayout>
