--- a/app/src/main/res/layout/fragment_chat_customer.xml
+++ b/app/src/main/res/layout/fragment_chat_customer.xml
@@ -35,7 +35,7 @@
             app:layout_constraintLeft_toRightOf="@+id/chat_icon" />
 
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/chatExitBtn"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/baseline_exit_to_app_24"
@@ -55,7 +55,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:padding="0dp"
             android:textSize="25sp"
             android:hint="Input here" />
