--- a/app/src/main/res/layout/fragment_chat_customer.xml
+++ b/app/src/main/res/layout/fragment_chat_customer.xml
@@ -2,11 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    app:layout_constraintRight_toRightOf="parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".customer.fragments.ChatFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/chat_header"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/notYellow"
         android:layout_width="match_parent"
@@ -45,15 +47,26 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ListView
+        android:padding="10dp"
+        android:id="@+id/listMessage"
+        android:divider="@null"
+        android:dividerHeight="10dp"
+        app:layout_constraintTop_toBottomOf="@id/chat_header"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toStartOf="@+id/sendBtn"
         app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/messageInput"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:padding="0dp"
@@ -66,7 +79,7 @@
         android:textColor="@color/White"
         android:gravity="center"
         android:background="@color/notYellow"
-        android:id="@+id/button2"
+        android:id="@+id/sendBtn"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:paddingLeft="20dp"
@@ -74,6 +87,7 @@
         android:fontFamily="sans-serif"
         android:textFontWeight="600"
         android:text="Send"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
